--- a/index.html
+++ b/index.html
@@ -88,11 +88,17 @@
   </div>
 </div>
 
-<!-- ✅ Safe CDN imports (no CORS issues) -->
+<!-- ✅ Correct ffmpeg.wasm imports with explicit corePath -->
 <script type="module">
-  import { createFFmpeg, fetchFile } from "https://esm.sh/@ffmpeg/ffmpeg@0.12.6";
-  import JSZip from "https://esm.sh/jszip@3.10.1";
+  import { createFFmpeg, fetchFile } from "https://unpkg.com/@ffmpeg/ffmpeg@0.12.6/dist/ffmpeg.min.js";
+  import JSZip from "https://cdn.jsdelivr.net/npm/jszip@3.10.1/+esm";
 
+  const ffmpeg = createFFmpeg({
+    log: true,
+    corePath: "https://unpkg.com/@ffmpeg/core@0.12.6/dist/ffmpeg-core.js"
+  });
+
+  /* --- main app logic --- */
   const fileEl = document.getElementById("file");
   const loadBtn = document.getElementById("loadBtn");
   const vid = document.getElementById("vid");
@@ -114,13 +120,12 @@
   const hlsTimeEl = document.getElementById("hlsTime");
 
   let selection=null,dragging=false,dragStart=null,startMark=null,endMark=null,blackouts=[],mutes=[],inputName="input.mp4";
-  const ffmpeg=createFFmpeg({log:true});
   let ffmpegLoaded=false;
   async function ensureFFmpeg(){
     if(!ffmpegLoaded){progLbl.textContent="Loading FFmpeg…";await ffmpeg.load();ffmpegLoaded=true;progLbl.textContent="FFmpeg ready";}
   }
   function fmt(s){if(!isFinite(s))return"--:--";s=Math.max(0,Math.floor(s));const h=Math.floor(s/3600),m=Math.floor((s%3600)/60),ss=s%60;return`${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}:${String(ss).padStart(2,"0")}`;}
-  function fitCanvas(){const r=vid.getBoundingClientRect();overlay.width=r.width;overlay.height=r.height;overlay.style.width=r.width+"px";overlay.style.height=r.height+"px";drawOverlay();}
+  function fitCanvas(){const r=vid.getBoundingClientRect();overlay.width=r.width;overlay.height=r.height;drawOverlay();}
   function videoRect(){const vw=vid.videoWidth,vh=vid.videoHeight;const cw=overlay.width,ch=overlay.height;if(!vw||!vh)return{x:0,y:0,w:cw,h:ch,scaleX:1,scaleY:1};const scale=Math.min(cw/vw,ch/vh);const dw=Math.round(vw*scale),dh=Math.round(vh*scale);const offx=Math.floor((cw-dw)/2),offy=Math.floor((ch-dh)/2);return{x:offx,y:offy,w:dw,h:dh,scaleX:vw/dw,scaleY:vh/dh};}
   function canvasToVideo(pt){const r=videoRect();const cx=Math.max(r.x,Math.min(pt.x,r.x+r.w));const cy=Math.max(r.y,Math.min(pt.y,r.y+r.h));return{x:Math.round((cx-r.x)*r.scaleX),y:Math.round((cy-r.y)*r.scaleY)};}
   function videoToCanvasRect(rect){const r=videoRect();return{x:Math.round(r.x+rect.x/r.scaleX),y:Math.round(r.y+rect.y/r.scaleY),w:Math.round(rect.w/r.scaleX),h:Math.round(rect.h/r.scaleY)};}
@@ -129,24 +134,29 @@
   vid.addEventListener("loadedmetadata",fitCanvas);
   vid.addEventListener("timeupdate",()=>timeLbl.textContent=`${fmt(vid.currentTime)} / ${fmt(vid.duration)}`);
   overlay.addEventListener("mousedown",e=>{if(!vid.videoWidth){alert("Load a video first.");return;}const bb=overlay.getBoundingClientRect();const sx=e.clientX-bb.left,sy=e.clientY-bb.top;const v0=canvasToVideo({x:sx,y:sy});dragging=true;dragStart=v0;selection={x:v0.x,y:v0.y,w:1,h:1};drawOverlay();});
-  window.addEventListener("mousemove",e=>{if(!dragging)return;const bb=overlay.getBoundingClientRect();const cx=Math.max(0,Math.min(e.clientX-bb.left,overlay.width));const cy=Math.max(0,Math.min(e.clientY-bb.top,overlay.height));const v1=canvasToVideo({x:cx,y:cy});const x=Math.min(dragStart.x,v1.x),y=Math.min(dragStart.y,v1.y);const w=Math.max(1,Math.abs(v1.x-dragStart.x)),h=Math.max(1,Math.abs(v1.y-dragStart.y));selection={x,y,w,h};drawOverlay();});
+  window.addEventListener("mousemove",e=>{if(!dragging)return;const bb=overlay.getBoundingClientRect();const cx=Math.max(0,Math.min(e.clientX-bb.left,overlay.width));const cy=Math.max(0,Math.min(e.clientY-bb.top,overlay.height));const v1=canvasToVideo({x:cx,y:cy});selection={x:Math.min(dragStart.x,v1.x),y:Math.min(dragStart.y,v1.y),w:Math.abs(v1.x-dragStart.x),h:Math.abs(v1.y-dragStart.y)};drawOverlay();});
   window.addEventListener("mouseup",()=>dragging=false);
   document.getElementById("clearSel").onclick=()=>{selection=null;drawOverlay();};
   document.getElementById("play").onclick=()=>vid.play();
   document.getElementById("pause").onclick=()=>vid.pause();
   document.getElementById("startNow").onclick=()=>{startMark=vid.currentTime;alert(`Start = ${startMark.toFixed(2)}s`);};
   document.getElementById("endNow").onclick=()=>{endMark=vid.currentTime;alert(`End = ${endMark.toFixed(2)}s`);};
-  function renderLists(){blkList.innerHTML=blackouts.map((b,i)=>`<li>#${i+1} ${b.start.toFixed(2)}–${b.end.toFixed(2)}s | x=${b.rect.x} y=${b.rect.y} w=${b.rect.w} h=${b.rect.h} <button data-i="${i}" class="rmB btn ghost" style="padding:2px 6px;margin-left:8px">remove</button></li>`).join("");muteList.innerHTML=mutes.map((m,i)=>`<li>#${i+1} ${m.start.toFixed(2)}–${m.end.toFixed(2)}s <button data-i="${i}" class="rmM btn ghost" style="padding:2px 6px;margin-left:8px">remove</button></li>`).join("");document.querySelectorAll(".rmB").forEach(b=>b.onclick=ev=>{const i=+ev.target.dataset.i;blackouts.splice(i,1);renderLists();});document.querySelectorAll(".rmM").forEach(b=>b.onclick=ev=>{const i=+ev.target.dataset.i;mutes.splice(i,1);renderLists();});}
-  document.getElementById("addBlackout").onclick=()=>{if(startMark==null||endMark==null)return alert("Set Start/End first");if(!selection)return alert("Draw a box");if(endMark<=startMark)return alert("End must be > Start");blackouts.push({start:startMark,end:endMark,rect:selection});renderLists();};
-  document.getElementById("addMute").onclick=()=>{if(startMark==null||endMark==null)return alert("Set Start/End first");if(endMark<=startMark)return alert("End must be > Start");mutes.push({start:startMark,end:endMark});renderLists();};
 
-  function browserCanPlayFile(file){const type=(file.type||"").toLowerCase();const ext=(file.name.split(".").pop()||"").toLowerCase();if(type&&vid.canPlayType(type))return true;const ua=navigator.userAgent.toLowerCase();const isChromeLike=ua.includes("chrome")||ua.includes("edg");if(isChromeLike&&(ext==="mov"||type.includes("quicktime")))return false;if(["mp4","mov","m4v"].includes(ext)){const h264OK=!!vid.canPlayType('video/mp4; codecs="avc1.42E01E"');const hevcOK=!!vid.canPlayType('video/mp4; codecs="hvc1"')||!!vid.canPlayType('video/mp4; codecs="hev1"');if(!h264OK&&!hevcOK)return false;}return true;}
-  async function makePreviewProxy(ffmpeg,inputName,outName="preview.mp4"){const args=["-i",inputName,"-vf","scale='min(1280,iw)':-2","-c:v","libx264","-crf","23","-preset","veryfast","-c:a","aac","-b:a","128k","-movflags","+faststart",outName];await ffmpeg.run(...args);const data=ffmpeg.FS("readFile",outName);return new Blob([data.buffer],{type:"video/mp4"});}
+  function renderLists(){blkList.innerHTML=blackouts.map((b,i)=>`<li>#${i+1} ${b.start.toFixed(2)}–${b.end.toFixed(2)}s | x=${b.rect.x} y=${b.rect.y} w=${b.rect.w} h=${b.rect.h}</li>`).join("");muteList.innerHTML=mutes.map((m,i)=>`<li>#${i+1} ${m.start.toFixed(2)}–${m.end.toFixed(2)}s</li>`).join("");}
+  document.getElementById("addBlackout").onclick=()=>{if(startMark==null||endMark==null)return alert("Set Start/End first");if(!selection)return alert("Draw a box");blackouts.push({start:startMark,end:endMark,rect:selection});renderLists();};
+  document.getElementById("addMute").onclick=()=>{if(startMark==null||endMark==null)return alert("Set Start/End first");mutes.push({start:startMark,end:endMark});renderLists();};
 
-  loadBtn.onclick=async()=>{const f=fileEl.files&&fileEl.files[0];if(!f)return alert("Choose a video");await ensureFFmpeg();inputName="input_"+Date.now()+"."+(f.name.split(".").pop()||"mp4");ffmpeg.FS("writeFile",inputName,await fetchFile(f));let previewBlob;if(browserCanPlayFile(f)){previewBlob=f;progLbl.textContent="Loaded (native preview)";}else{progLbl.textContent="Making preview (transcoding)…";previewBlob=await makePreviewProxy(ffmpeg,inputName,"preview.mp4");progLbl.textContent="Preview ready (proxy)";}const url=URL.createObjectURL(previewBlob);vid.src=url;vid.load();meta.textContent=`Loaded: ${f.name} (${(f.size/1e6).toFixed(1)} MB)`;};
+  function browserCanPlayFile(file){const type=(file.type||"").toLowerCase();const ext=(file.name.split(".").pop()||"").toLowerCase();if(type&&vid.canPlayType(type))return true;const ua=navigator.userAgent.toLowerCase();if((ua.includes("chrome")||ua.includes("edg"))&&(ext==="mov"||type.includes("quicktime")))return false;return true;}
+  async function makePreviewProxy(ffmpeg,inputName){await ffmpeg.run("-i",inputName,"-vf","scale='min(1280,iw)':-2","-c:v","libx264","-crf","23","-preset","veryfast","-c:a","aac","-b:a","128k","-movflags","+faststart","preview.mp4");const data=ffmpeg.FS("readFile","preview.mp4");return new Blob([data.buffer],{type:"video/mp4"});}
 
-  let advOpen=false;toggleAdv.onclick=()=>{advOpen=!advOpen;adv.style.display=advOpen?"block":"none";advState.textContent=advOpen?"":"(using defaults)";};
-  function buildFilters(){const vparts=blackouts.map(b=>{const r=b.rect,st=b.start,en=b.end;return`drawbox=x=${r.x}:y=${r.y}:w=${r.w}:h=${r.h}:color=black@1:t=fill:enable='between(t,${st},${en})'`;});const aparts=mutes.map(m=>`volume=0:enable='between(t,${m.start},${m.end})'`);const v=vparts.length?vparts.join(","):"null";const a=aparts.length?aparts.join(","):"anull";return{filterComplex:`[0:v]${v}[vout];[0:a]${a}[aout]`,maps:["-map","[vout]","-map","[aout]"]};}
+  loadBtn.onclick=async()=>{const f=fileEl.files&&fileEl.files[0];if(!f)return alert("Choose a video");await ensureFFmpeg();inputName="input_"+Date.now()+"."+(f.name.split(".").pop()||"mp4");ffmpeg.FS("writeFile",inputName,await fetchFile(f));let previewBlob;if(browserCanPlayFile(f)){previewBlob=f;progLbl.textContent="Loaded (native preview)";}else{progLbl.textContent="Making preview…";previewBlob=await makePreviewProxy(ffmpeg,inputName);progLbl.textContent="Preview ready";}vid.src=URL.createObjectURL(previewBlob);vid.load();meta.textContent=`Loaded: ${f.name}`;};
+
+  toggleAdv.onclick=()=>{adv.style.display=adv.style.display==="none"?"block":"none";};
+
+  function buildFilters(){const vparts=blackouts.map(b=>`drawbox=x=${b.rect.x}:y=${b.rect.y}:w=${b.rect.w}:h=${b.rect.h}:color=black@1:t=fill:enable='between(t,${b.start},${b.end})'`);const aparts=mutes.map(m=>`volume=0:enable='between(t,${m.start},${m.end})'`);const v=vparts.length?vparts.join(","):"null";const a=aparts.length?aparts.join(","):"anull";return{filterComplex:`[0:v]${v}[vout];[0:a]${a}[aout]`,maps:["-map","[vout]","-map","[aout]"]};}
   function blobFromU8(u8,type){return new Blob([u8.buffer],{type});}
 
-  document.getElementById("startExport").onclick=async()=>{if(!ffmpegLoaded)await ensureFFmpeg();if(!vid.src)return alert("Load a video first");prog.value=0;progLbl.textContent="Preparing…";outLinks.innerHTML="";const{filterComplex,maps}=buildFilters();const mp4Name="out.mp4",hlsM3U8="master.m3u8",hlsSegPat="segment_%04d.ts";ffmpeg.setLogger(({type,message})=>{if(type==="fferr"||type==="ffout"){const m=message.match(/time=(\d{2}):(\d{2}):(\d{2}\.\d{2})/);if(m&&isFinite(vid.duration)){const t=(+m[1])*3600+(+m[2])*60+parseFloat(m[3]);const p=Math.max(0,Math.min(1,t/vid.duration));prog.value=p;progLbl.textContent=`Encoding MP4… ${(p*100|0)}%`;}}});const codec=(codecEl.value||"libx264"),crf=(crfEl.value||"23"),preset=(presetEl.value||"veryfast");await ffmpeg.run("-i",inputName,"-filter_complex",filterComplex,...maps,"-c:v",codec,"-crf",crf,"-preset",preset,"-c:a","aac","-movflags","+faststart",mp4Name);const mp4Data=ffmpeg.FS("readFile",mp4Name);const mp4Blob=blobFromU8(mp4Data,"video/mp4");const mp4Url=URL.createObjectURL(mp4Blob);prog.value=0;progLbl.textContent="Packaging HLS…";const hlsTime=(hlsTimeEl.value||"6");await ffmpeg.run("-i",inputName,"-filter_complex",filterComplex,...maps,"-c:v",codec,"-crf",crf,"-preset",preset,"-c:a","aac","-hls_time",hlsTime,"-hls_playlist_type
+  document.getElementById("startExport").onclick=async()=>{if(!ffmpegLoaded)await ensureFFmpeg();if(!vid.src)return alert("Load a video first");const{filterComplex,maps}=buildFilters();prog.value=0;progLbl.textContent="Encoding MP4…";await ffmpeg.run("-i",inputName,"-filter_complex",filterComplex,...maps,"-c:v","libx264","-crf","23","-preset","veryfast","-c:a","aac","-movflags","+faststart","out.mp4");const mp4Data=ffmpeg.FS("readFile","out.mp4");const mp4Blob=new Blob([mp4Data.buffer],{type:"video/mp4"});const mp4Url=URL.createObjectURL(mp4Blob);outLinks.innerHTML=`<a class='btn' href='${mp4Url}' download='redacted.mp4'>Download MP4</a>`;prog.value=1;progLbl.textContent="Done!";};
+</script>
+</body>
+</html>
